--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,59 @@ django-cors-headers==4.3.1
 google-auth==2.23.4
 google-auth-oauthlib==1.1.0
 google-auth-httplib2==0.1.1
+asgiref==3.8.1
+boto3==1.37.21
+botocore==1.37.21
+Brotli==1.1.0
+cachetools==5.5.2
+certifi==2024.12.14
+cffi==1.17.1
+charset-normalizer==3.4.1
+cryptography==44.0.0
+defusedxml==0.8.0rc2
+dj-database-url==2.3.0
+dj-rest-auth==7.0.1
+Django==5.1.5
+django-allauth==65.3.1
+django-heroku==0.3.1
+django-storages==1.14.5
+djangorestframework==3.15.2
+djangorestframework_simplejwt==5.4.0
+google-api-core==2.24.2
+google-api-python-client==2.165.0
+google-auth==2.38.0
+google-auth-httplib2==0.2.0
+google-auth-oauthlib==1.2.1
+googleapis-common-protos==1.69.2
+gunicorn==23.0.0
+httplib2==0.22.0
+idna==3.10
+jmespath==1.0.1
+oauthlib==3.2.2
+packaging==24.2
+pillow==11.1.0
+proto-plus==1.26.1
+protobuf==6.30.1
+psycopg2==2.9.10
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pycparser==2.22
+PyJWT==2.10.1
+pyparsing==3.2.3
+python-dateutil==2.9.0.post0
+python3-openid==3.2.0
+requests==2.32.3
+requests-oauthlib==2.0.0
+rsa==4.9
+s3transfer==0.11.4
+six==1.17.0
+social-auth-app-django==5.4.2
+social-auth-core==4.5.4
+sqlparse==0.5.3
+typing_extensions==4.12.2
+tzdata==2025.1
+uritemplate==4.1.1
+urllib3==2.3.0
+waitress==3.0.2
+whitenoise==6.8.2
+uvicorn
