--- a/render.yaml
+++ b/render.yaml
@@ -5,7 +5,7 @@ services:
     name: vhdev
     runtime: python
     buildCommand: "./build.sh"
-    startCommand: "python -m gunicorn vkinternational.asgi:application -k uvicorn.workers.UvicornWorker"
+    startCommand: "python -m gunicorn vhinternational.asgi:application -k uvicorn.workers.UvicornWorker"
     envVars:
       - key: DATABASE_URL
         fromDatabase:
