--- a/render.yaml
+++ b/render.yaml
@@ -9,7 +9,7 @@ services:
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: vkinternational
+          name: vhinternational
           property: connectionString
       - key: SECRET_KEY
         generateValue: true
